# streaming_calc_tonic

./: Cargo.toml  build.rs
proto/: streamingcalc.proto
src/: client.rs  global.rs  main.rs
