[package]
name = "streaming_calc_tonic"
version = "0.1.0"
edition = "2021"
authors = ["sycured <60801403+sycured@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dev]
opt-level = 3
lto = false
debug = 1

[package.metadata.cargo-udeps.ignore]
normal = ["tikv-jemallocator-global"]

[dependencies]
clap = {version = "4.5.1", features = ["cargo", "derive", "env", "wrap_help"]}
prost = "0.12.3"
tikv-jemallocator-global = "0.5.0"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
clap = {version = "4.5.1", features = ["cargo", "deprecated", "derive" ,"env", "wrap_help"]}

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"